added some images, styling

--- a/combat/advanced_combat.html
+++ b/combat/advanced_combat.html
@@ -13,6 +13,7 @@
 <body>
 
 <h1>Beginner's Bonfire</h1>
+<h6>A Comprehensive Beginner's Guide to Dark Souls 3</h6>
 
 <!-- Navigation -->
 	<div id = "navcontainer">
@@ -298,6 +299,10 @@
 	</ul>
 
 </div>	
+
+<a id="previous" href="combat.html">Previous Page</a>
+<a id="next" href="../magic/magic.html">Next Page</a>
+
 <footer>
 
 		Copyright 2016 David Winstein-Hibbs <br />
