--- a/getting started/bonfires.html
+++ b/getting started/bonfires.html
@@ -11,6 +11,7 @@
 <body>
 
 <h1>Beginner's Bonfire</h1>
+<h6>A Comprehensive Beginner's Guide to Dark Souls 3</h6>
 
 <!-- Navigation -->
 	<div id = "navcontainer">
@@ -108,13 +109,21 @@
 
 </p>
 
+<img src="../media/images/bonfire_rest.jpg" alt="Resting at the Bonfire" title="Rest at a bonfire to replenish health." />
+
 
 <h3>Estus Flasks</h3>
 <p>
 	Estus flasks are your main source of health and focus point replenishment. If you need healing, take a swig from the Estus by pressing down on the D-Pad until you see the Estus flask icon.
 	Then press the X button on your gamepad. Drinking from the Ashen Estus flask will refill your focus points so you can cast more spells or perform more Weapon Arts.
 </p>
+<img src="../media/images/estus_flask.png" alt="Estus Flask" title="Drink Estus to replenish health." />
+<img src="../media/images/ashen_estus_flask.png" alt="Ashen Estus Flask" title="Drink Ashen Estus to replenish focus points." />
+
 </div>
+
+<a id="previous" href="souls.html">Previous Page</a>
+<a id="next" href="firelink.html">Next Page</a>
 
 <footer>
 
