--- a/getting started/firelink.html
+++ b/getting started/firelink.html
@@ -10,6 +10,7 @@
 
 <body>
 <h1>Beginner's Bonfire</h1>
+<h6>A Comprehensive Beginner's Guide to Dark Souls 3</h6>
 
 <!-- Navigation -->
 	<div id = "navcontainer">
@@ -106,7 +107,9 @@
 	to spend all the souls you have saved up to make your character stronger.
 </p>
 
-<h3>Undead Bone Shard</h3>
+<img src="../media/images/firelink_shrine.jpg" alt="Firelink Shrine" title="Firelink Shrine: Home of the First Flame." />
+
+<h3>Undead Bone Shards</h3>
 <p>
 	If you find any Undead Bone Shards during your adventure, you can use them to upgrade your bonfire at Firelink Shrine. Upgrading your bonfire will cause your Estus Flask to
 	heal more health points than it did before.
@@ -116,6 +119,8 @@
 	If you select "Yes", an Undead Bone Shard will be removed from your inventory and your bonfire will increase in level.
 	You can upgrade the bonfire a maximum of 10 times.
 </p>
+
+<img src="../media/images/undead_bone_shard.png" alt="Undead Bone Shard" title="An Undead Bone Shard." />
 
 
 <h3>The Firekeeper</h3>
@@ -134,16 +139,16 @@
 
 <h3>Andre the Blacksmith</h3>
 <p>
-	A friendly blacksmith from the land of Lordran, Andre is here to upgrade your weapons and Estus flasks. 
+	A friendly blacksmith from the land of Astora, Andre is here to upgrade your weapons and Estus flasks. 
 	
-	<h4>Upgrading and Allocating Estus</h4>
+	<h4>Upgrading and Allotting Estus</h4>
 	<p>
 		Throughout the game you'll find special items called Estus Shards, and if you bring them to Andre he can
 		use them to increase the number of Estus flasks you can carry by one. Andre can also reallocate your Estus. If you talk to him and select "Reallocate Estus," you can choose how much of your Estus is
 		in healing Estus Flasks and how much is in your Ashen Estus flasks.
 	</p>
 	
-	<h4>Upgrading Weapons</h4>
+	<h4>Reinforcing Weapons</h4>
 	<p>
 		Throughout the game you'll come across special upgrade materials called Titanite Shards. If you bring Titanite Shards to Andre, you can exchange
 		a few plus a small soul price for him to upgrade your weapons so they deal more damage per swing or spell cast. Each weapon can be upgraded 10 times, however it costs more souls and more Titanite
@@ -159,12 +164,17 @@
 </p>
 </div>
 
+<a id="previous" href="bonfires.html">Previous Page</a>
+<a id="next" href="items.html">Next Page</a>
+
 <footer>
 
-		Copyright 2016 David Winstein-Hibbs <br />
-		All rights reserved
+	Copyright 2016 David Winstein-Hibbs <br />
+	All rights reserved
 	
-	</footer>
+</footer>
+
+
 
 </body>
 
