--- a/getting started/items.html
+++ b/getting started/items.html
@@ -13,6 +13,8 @@
 <body>
 
 <h1>Beginner's Bonfire</h1>
+<h6>A Comprehensive Beginner's Guide to Dark Souls 3</h6>
+
 
 <!-- Navigation -->
 	<div id = "navcontainer">
@@ -181,7 +183,7 @@
 	Spells you've found or bought. Check their descriptions to figure out what they do.
 </p>
 
-<h3>Meelee Weapons</h3>
+<h3>Melee Weapons</h3>
 <p>
 	If you can swing it, it's a Meelee Weapon. You can check its Scaling and Attribute Requirements by hovering over it.
 	Check the description to figure out if it has any special effects and what its Weapon Art does.
@@ -235,12 +237,15 @@
 </p>
 </div>
 
+<a id="previous" href="firelink.html">Previous Page</a>
+<a id="next" href="../equipment/equipment.html">Next Page</a>
+
 <footer>
 
-		Copyright 2016 David Winstein-Hibbs <br />
-		All rights reserved
+	Copyright 2016 David Winstein-Hibbs <br />
+	All rights reserved
 	
-	</footer>
+</footer>
 
 
 </body>
