--- a/getting started/overview.html
+++ b/getting started/overview.html
@@ -11,6 +11,7 @@
 <body>
 
 	<h1>Beginner's Bonfire</h1>
+	<h6>A Comprehensive Beginner's Guide to Dark Souls 3</h6>
 	
 	<!-- Navigation -->
 	<div id = "navcontainer">
@@ -117,17 +118,17 @@
 	</p>
 	
 		<ul>
-			<li><strong>Vigor</strong> - Determines your Max Health Points. Level this to make your character more beefy so they can absorb more hits.</li>
-			<li><strong>Attunement</strong> - Determines your Max Focus Points (like Mana in other games) and your number of Attunement Slots which you can equip spells to. Level this if you plan on making a character that uses magic.</li>
-			<li><strong>Endurance</strong> - Determines your Max Stamina. Stamina is really important because almost every action has a stamina cost. Level this on every character so they can swing their weapon more, dodge more, run further, and cast more spells without waiting for stamina to recharge.</li>
-			<li><strong>Vitality</strong> - Determines your Max Equip Load. Basically, this is stat to level if you want to wear heavy armor. Leveling Vitality will allow you to wear heavy gear and still be able to dodge roll properly.</li>
-			<li><strong>Strength</strong> - Determines weapon damage for Strength Scaling weapons. The damage of some weapons scales with your Strength Stat. Usually these weapons are big and slow, but pack quite a punch.</li>
-			<li><strong>Dexterity</strong> - Determines weapon damage for Dexterity Scaling weapons. Like Strength, the damage of some weapons scale with Dexterity. These weapons are usually smaller and have faster swing animations, but tend to do less damage per swing than Strength weapons. (Note: Many
+			<li id="vigor"><strong>Vigor</strong> - Determines your Max Health Points. Level this to make your character more beefy so they can absorb more hits.</li>
+			<li id="attunement"><strong>Attunement</strong> - Determines your Max Focus Points (like Mana in other games) and your number of Attunement Slots which you can equip spells to. Level this if you plan on making a character that uses magic.</li>
+			<li id="endurance"><strong>Endurance</strong> - Determines your Max Stamina. Stamina is really important because almost every action has a stamina cost. Level this on every character so they can swing their weapon more, dodge more, run further, and cast more spells without waiting for stamina to recharge.</li>
+			<li id="vitality"><strong>Vitality</strong> - Determines your Max Equip Load. Basically, this is stat to level if you want to wear heavy armor. Leveling Vitality will allow you to wear heavy gear and still be able to dodge roll properly.</li>
+			<li id="strength"><strong>Strength</strong> - Determines weapon damage for Strength Scaling weapons. The damage of some weapons scales with your Strength Stat. Usually these weapons are big and slow, but pack quite a punch.</li>
+			<li id="dexterity"><strong>Dexterity</strong> - Determines weapon damage for Dexterity Scaling weapons. Like Strength, the damage of some weapons scale with Dexterity. These weapons are usually smaller and have faster swing animations, but tend to do less damage per swing than Strength weapons. (Note: Many
 											weapons scale with both Strength and Dexterity to some degree.)</li>
-			<li><strong>Faith</strong> - Determines the effectiveness of Miracles. Miracles are like light magic, so increase your Faith if you want to make a cleric or paladin-like character that utilizes lightning and healing.</li>
-			<li><strong>Intelligence</strong> - Determines the effectiveness of Sorceries and Pyromancies. Sorceries are another type of magic that is more arcane, and Pyromancies are the third and final form of magic which is all based on fire. 
+			<li id="faith"><strong>Faith</strong> - Determines the effectiveness of Miracles. Miracles are like light magic, so increase your Faith if you want to make a cleric or paladin-like character that utilizes lightning and healing.</li>
+			<li id="intelligence"><strong>Intelligence</strong> - Determines the effectiveness of Sorceries and Pyromancies. Sorceries are another type of magic that is more arcane, and Pyromancies are the third and final form of magic which is all based on fire. 
 				If you like shooting magic missles or throwing fireballs, level up Intelligence.</li>
-			<li><strong>Luck</strong> - Determines Item Discovery Chance and effectiveness of Bleed or Poison weapons. I don't recommend putting any points into Luck as a beginner, because it is not helpful in combat unless you're making
+			<li id="luck"><strong>Luck</strong> - Determines Item Discovery Chance and effectiveness of Bleed or Poison weapons. I don't recommend putting any points into Luck as a beginner, because it is not helpful in combat unless you're making
 				a bleed or poison build. In that case, level up Luck to increase the speed of bleed or poison build up, but it won't increase the damage done.</li>
 		
 		
@@ -153,7 +154,11 @@
 	<h4>Knight</h4>
 	<p>
 		A heavily armored knight with a solid shield and a longsword. Starts with the best starting stats for most builds. Best starting option for an absolute beginner.
+		
+		
 	</p>
+	<img class="starter" src="../media/images/knight.jpg" alt="Knight" title="Knight" />
+	
 	
 	<table>
 		<tr>
@@ -202,12 +207,14 @@
 		</tr>
 	</table>
 	
-	
 	<h4>Mercenary</h4>
 	<p>
 		A moderately armored mercenary with twin curved swords and a wooden shield. Best for a pure Dexterity build. Starts with the highest Dexterity of all the classes, and has average Attunement and Intelligence
 		if you want to throw some spells in too.
 	</p>
+	
+	
+	<img class="starter" src="../media/images/mercenary.jpg" alt="Mercenary" title="Mercenary" />
 	
 	<table>
 		<tr>
@@ -262,6 +269,8 @@
 		Only choose if you don't want to use any spells. Starts with a battle-axe and a wooden shield.
 	</p>
 	
+	<img class="starter" src="../media/images/warrior.jpg" alt="Warrior" title="Warrior" />
+	
 	<table>
 		<tr>
 			<th colspan="2">Starting Stats</th> <!-- Table heading -->
@@ -314,6 +323,8 @@
 		A herald with moderate armor, a solid shield, a spear, a talisman (item used to cast miracles), and a weak healing miracle. The herald's stats aren't spectacularly optimized for most builds,
 		but the spear and the shield are great starting gear for beginners and veterans alike.
 	</p>
+	
+	<img class="starter" src="../media/images/herald.jpg" alt="Herald" title="Herald" />
 	
 	<table>
 		<tr>
@@ -368,6 +379,8 @@
 		for Bleed/Poison builds. It's also the only class that starts with a bow if you want to make an archer character.
 	</p>
 	
+	<img class="starter" src="../media/images/thief.jpg" alt="Thief" title="Thief" />
+	
 	<table>
 		<tr>
 			<th colspan="2">Starting Stats</th> <!-- Table heading -->
@@ -420,6 +433,8 @@
 		A light-armored assassin who uses sorceries as well as weapons to quickly dispose of enemies. Starts with a small shield for parrying, a thrusting sword, a staff for casting Sorceries, and a sorcery that negates
 		fall damage and reduces the noise your footsteps make. Good for pure Dexterity builds, and Intelligence/Dexterity builds like a spellsword character.
 	</p>
+	
+	<img class="starter" src="../media/images/assassin.jpg" alt="Assassin" title="Assassin" />
 	
 	<table>
 		<tr>
@@ -476,6 +491,8 @@
 		Good for full Intelligence builds that utilize a lot of sorceries.
 	</p>
 	
+	<img class="starter" src="../media/images/sorcerer.jpg" alt="Sorcerer" title="Sorcerer" />
+	
 	<table>
 		<tr>
 			<th colspan="2">Starting Stats</th> <!-- Table heading -->
@@ -530,6 +547,8 @@
 		A good jack-of-all-trades class.
 	</p>
 	
+	<img class="starter" src="../media/images/pyromancer.jpg" alt="Pyromancer" title="Pyromancer" />
+	
 	<table>
 		<tr>
 			<th colspan="2">Starting Stats</th> <!-- Table heading -->
@@ -582,6 +601,8 @@
 		A light-armored cleric who starts with a mace, a wooden shield, a chime for casting miracles, and the miracles Heal and Force. Has the highest starting Faith of all the classes as well as
 		fairly good Strength, making it ideal for a Strength/Faith or pure Faith builds. The Heal miracle is good to have for it you run out of Estus (healing potions).
 	</p>
+	
+	<img class="starter" src="../media/images/cleric.jpg" alt="Cleric" title="Cleric" />
 	
 	<table>
 		<tr>
@@ -637,6 +658,8 @@
 		often times lead to better stat optimization for builds, I do not recommend choosing the Deprived if you are a beginner.
 	</p>
 	
+	<img class="starter" src="../media/images/deprived.jpg" alt="Deprived" title="Deprived" />
+	
 	<table>
 		<tr>
 			<th colspan="2">Starting Stats</th> <!-- Table heading -->
@@ -686,6 +709,8 @@
 	
 	</div>
 	
+	<a id="previous" href="../index.html">Previous Page</a>
+	<a id="next" href="souls.html">Next Page</a>
 	
 	<footer>
 
