--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
 	<h1>Beginner's Bonfire</h1>
+	<h6>A Comprehensive Beginner's Guide to Dark Souls 3</h6>
 	
 	<!-- Navigation -->
 	<div id = "navcontainer">
@@ -115,8 +116,10 @@
 		This website should help struggling players find their footing and be able to explore the world more confidently without spoiling any of the discoveries to come.
 	</p>
 	
+	<a id="next" href="getting started/overview.html">Next Page</a>
+	
 	<footer>
-
+		
 		Copyright 2016 David Winstein-Hibbs <br />
 		All rights reserved
 	
