--- a/magic/magic.html
+++ b/magic/magic.html
@@ -13,6 +13,7 @@
 <body>
 
 <h1>Beginner's Bonfire</h1>
+<h6>A Comprehensive Beginner's Guide to Dark Souls 3</h6>
 
 <!-- Navigation -->
 	<div id = "navcontainer">
@@ -106,9 +107,9 @@
 	There are three main schools of magic in <cite>Dark Souls 3</cite> which provide both offensive and utility spells:
 	
 	<ul>
-		<li><a href= "sorcery.html">Sorcery</a></li>
-		<li><a href= "pyromancy.html">Pyromancy</a></li>
-		<li><a href= "miracles.html">Mircales</a></li>
+		<li class="magics"><a href= "sorcery.html">Sorcery</a></li>
+		<li class="magics"><a href= "pyromancy.html">Pyromancy</a></li>
+		<li class="magics"><a href= "miracles.html">Miracles</a></li>
 	</ul>
 </p>	
 	
@@ -118,7 +119,7 @@
 
 </p>
 
-<h3>Attunement and Attunment Slots</h3>
+<h3>Attunement and Attunement Slots</h3>
 <p>
 	To attune a spell, you must rest at any bonfire and select "Attune Spell" from the menu. From there you can select from the attunement slots you have, and then select a spell from your inventory
 	to place in that slot. Once the spell is attuned, you can cast it by using a light attack with the appropriate casting tool. 
@@ -162,14 +163,10 @@
 	into the Ashen Estus Flask if you are planning on using spells.
 </p>
 
+</div>
 
-<h4>Click on the names of the schools of magic for their specific school descriptions:</h4>
-
-	<a href= "sorcery.html">Sorcery</a>
-	<a href= "pyromancy.html">Pyromancy</a>
-	<a href= "miracles.html">Mircales</a>
-	
-</div>	
+<a id="previous" href="../combat/advanced_combat.html">Previous Page</a>
+<a id="next" href="sorcery.html">Next Page</a>	
 <footer>
 
 		Copyright 2016 David Winstein-Hibbs <br />
