--- a/magic/miracles.html
+++ b/magic/miracles.html
@@ -13,6 +13,7 @@
 <body>
 
 <h1>Beginner's Bonfire</h1>
+<h6>A Comprehensive Beginner's Guide to Dark Souls 3</h6>
 
 <!-- Navigation -->
 	<div id = "navcontainer">
@@ -149,6 +150,8 @@
 	her.
 </p>
 </div>
+
+<a id="previous" href="pyromancy.html">Previous Page</a>
 
 <footer>
 
