--- a/magic/sorcery.html
+++ b/magic/sorcery.html
@@ -13,6 +13,7 @@
 <body>
 
 <h1>Beginner's Bonfire</h1>
+<h6>A Comprehensive Beginner's Guide to Dark Souls 3</h6>
 
 <!-- Navigation -->
 	<div id = "navcontainer">
@@ -136,6 +137,9 @@
 	Sorceries for you to buy. Be sure to bring Orbeck at least one Sorcery Scroll before you fight the Abyss Watchers, or else he will leave Firelink Shrine forever.	
 </p>
 </div>
+
+<a id="previous" href="magic.html">Previous Page</a>
+<a id="next" href="pyromancy.html">Next Page</a>
 
 
 <footer>
