--- a/combat/combat.html
+++ b/combat/combat.html
@@ -11,6 +11,7 @@
 <body>
 
 <h1>Beginner's Bonfire</h1>
+<h6>A Comprehensive Beginner's Guide to Dark Souls 3</h6>
 
 <!-- Navigation -->
 	<div id = "navcontainer">
@@ -269,6 +270,9 @@
 	</ul>
 </p>
 </div>
+
+<a id="previous" href="../equipment/equipment.html">Previous Page</a>
+<a id="next" href="advanced_combat.html">Next Page</a>
 
 <footer>
 
