--- a/equipment/equipment.html
+++ b/equipment/equipment.html
@@ -13,6 +13,7 @@
 <body>
 
 <h1>Beginner's Bonfire</h1>
+<h6>A Comprehensive Beginner's Guide to Dark Souls 3</h6>
 
 <!-- Navigation -->
 	<div id = "navcontainer">
@@ -189,12 +190,15 @@
 </p>
 </div>
 
+<a id="previous" href="../getting started/items.html">Previous Page</a>
+<a id="next" href="../combat/combat.html">Next Page</a>
+
 <footer>
 
-		Copyright 2016 David Winstein-Hibbs <br />
-		All rights reserved
+	Copyright 2016 David Winstein-Hibbs <br />
+	All rights reserved
 	
-	</footer>
+</footer>
 
 </body>
 
