--- a/getting started/souls.html
+++ b/getting started/souls.html
@@ -11,6 +11,7 @@
 <body>
 
 	<h1>Beginner's Bonfire</h1>
+	<h6>A Comprehensive Beginner's Guide to Dark Souls 3</h6>
 	
 	<!-- Navigation -->
 	<div id = "navcontainer">
@@ -120,6 +121,8 @@
 		you'll be able to pick up all of the souls you lost. However, if you die again along the way towards your souls, all of those souls will be permanently lost.
 	</p>
 	
+	<img src="../media/images/greensoul.png" alt="Green Soul Orb" title="A bloodstain containing the souls you've lost." />
+	
 	
 	
 	<p>
@@ -128,6 +131,8 @@
 		get one extra chance per ring!
 	</p>
 	
+	<img src="../media/images/ring_of_sacrifice.png" alt="Ring of Sacrifice" title="Equip this Ring of Sacrifice for an extra chance to collect your lost souls." />
+	
 	<h3>Soul Items</h3>
 	<p>
 		Sometimes you'll find items called: "Soul of a (insert name here)". These are Soul Items. If you use them, you will destroy the item and
@@ -135,7 +140,12 @@
 		stay in your inventory when you die but your souls will not.
 	</p>
 	
+	<img src="../media/images/soul_item.png" alt="Soul of an Unknown Traveler" title="A Soul Item can be used to immediatly collect a certain number of souls." />
+	
 	</div>
+	
+	<a id="previous" href="overview">Previous Page</a>
+	<a id="next" href="bonfires.html">Next Page</a>
 
 	<footer>
 
