--- a/magic/pyromancy.html
+++ b/magic/pyromancy.html
@@ -13,6 +13,7 @@
 <body>
 
 <h1>Beginner's Bonfire</h1>
+<h6>A Comprehensive Beginner's Guide to Dark Souls 3</h6>
 
 <!-- Navigation -->
 	<div id = "navcontainer">
@@ -132,6 +133,9 @@
 	Be on the lookout for Pyromancy Tomes. Bring these key items to Cornyx in Firelink Shrine and he will add a bunch of new Pyromancies to his inventory for you to buy.
 </p>
 </div>
+
+<a id="previous" href="sorcery.html">Previous Page</a>
+<a id="next" href="miracles.html">Next Page</a>
 
 <footer>
 
