--- a/getting started/firelink.html
+++ b/getting started/firelink.html
@@ -130,6 +130,8 @@
 	but if you feel like your character isn't strong enough to continue, it might be worth farming some weaker enemies until you can level up to a level you are comfortable with.
 </p>
 
+<img src="../media/images/firekeeper.jpg" alt="The Firekeeper" title="The Firekeeper of the Firelink Shrine Bonfire." />
+
 <h3>The Shrine Handmaiden</h3>
 <p>
 	The Shrine Handmaiden is a simple item vendor that can be found sitting in a chair near the bonfire in Firelink Shrine. She sells basic consumables, weapons and armor to help you if you ever need them. 
@@ -137,9 +139,13 @@
 	added when you do this. As a side note, be sure to pick up the White Sign Soapstone from the Handmaiden, as it only costs 500 Souls and is useful if you ever want to be summoned to help other players.
 </p>
 
+<img src="../media/images/handmaiden.jpg" alt="The Shrine Handmaiden" title="Bring Umbral Ash to the Handmaiden and purchase her wares." />
+
 <h3>Andre the Blacksmith</h3>
 <p>
 	A friendly blacksmith from the land of Astora, Andre is here to upgrade your weapons and Estus flasks. 
+	
+	<img src="../media/images/andre.jpg" alt="Andre the Blacksmith" title="Andre of Astora, the Old Blacksmith." />
 	
 	<h4>Upgrading and Allotting Estus</h4>
 	<p>
@@ -148,6 +154,8 @@
 		in healing Estus Flasks and how much is in your Ashen Estus flasks.
 	</p>
 	
+	<img src="../media/images/allotting_estus.jpg" alt="Alloting Estus" title="Press left or right on the D-Pad to change your Estus Allotment." />
+	
 	<h4>Reinforcing Weapons</h4>
 	<p>
 		Throughout the game you'll come across special upgrade materials called Titanite Shards. If you bring Titanite Shards to Andre, you can exchange
@@ -155,6 +163,13 @@
 		to upgrade each time. Also, as the weapon gets stronger it will require stronger Titanite. Weapons can be upgraded form +1 to +3 with standard Titanite Shards, +4 to +6 with Large Titanite Shards,
 		+7 to +9 with Titanite Chunks, and to +10 with a Titanite Slab. Some special weapons will require rarer Twinkling Titanite or Titanite Scales to upgrade.
 	<p>
+	
+	<img class="materials" src="../media/images/titanite_shard.png" alt="Titanite Shard" title="Titanite Shards are used to reinforce weapons from +1 to +3." />
+	<img class="materials" src="../media/images/large_titanite_shard.png" alt="Large Titanite Shard" title="Large Titanite Shards are used to reinforce weapons from +4 to +6." />
+	<img class="materials" src="../media/images/titanite_chunk.png" alt="Titanite Chunk" title="Titanite Chunks are used to reinforce weapons from +7 to +9." />
+	<img class="materials" src="../media/images/titanite_slab.png" alt="Titanite Slab" title="Titanite Slabs are used to reinforce weapons to max level." />
+	<img class="materials" src="../media/images/twinkling_titanite.png" alt="Twinkling Titanite" title="Twinkling Titanite is used to reinforce special weapons." />
+	<img class="materials" src="../media/images/titanite_scale.png" alt="Titanite Scale" title="Titanite Scales are used to reinforce weapons transposed from Boss Souls." />
 </p>
 
 <h3>Other NPCs</h3>
