added and edited almost all of the images, just a few left!

--- a/getting started/items.html
+++ b/getting started/items.html
@@ -114,7 +114,7 @@
 		<li>Materials</li>
 		<li>Key Items</li>
 		<li>Spells</li>
-		<li>Meelee Weapons</li>
+		<li>Melee Weapons</li>
 		<li>Ranged Weapons</li>
 		<li>Catalysts</li>
 		<li>Shields</li>
@@ -143,14 +143,20 @@
 <h4 class="multitool">White Sign Soapstone</h4>
 <p class="multip">
 	Buy this item from the Shrine Handmaiden for 500 souls. Use the White Sign Soapstone to leave a Summon Sign on the ground. Players in other games
-	can activate your Summon Sign to summon you as a phantom in their world to help them progress through their game.
+	can activate your Summon Sign to summon you as a phantom in their world to help them progress through their game. If you find a Summon Sign in your own game,
+	you can activate it to summon another player to help you progress through your own game.
 </p>
+
+<img src="../media/images/whitesign.png" alt="White Sign Soapstone" title="A White Sign Soapstone that can be used to write one's Summon Sign on the ground." />
+<img src="../media/images/summon_sign.jpg" alt="Summon Sign" title="A signiture written on the ground by one with a White Sign Soapstone. Can be activated to summon a cooperator." />
 
 <h4 class="multitool">Black Separation Crystal</h4>
 <p class="multip">
 	Use the Black Separation Crystal to make friendly phantoms leave your world. Some paths are blocked if you have friendly phantoms in your world,
 	so you may have to use this to progress. Cannot banish invading phantoms.
 </p>
+
+<img src="../media/images/black_separation_crystal.png" alt="Black Separation Crystal" title="Activate the Black Separation Crystal to banish friendly phantoms from your world." />
 
 <h4 class="multitool">Embers</h4>
 <p class="multip">
@@ -159,11 +165,16 @@
 	Embering and summoning phantoms to help will increase the chance of an invading player to enter your world and try to kill you. 
 </p>
 
+<img src="../media/images/ember.png" alt="Ember" title="An Ember of the fading flame, activate it to connect your own world to others." />
+
 <h4 class="multitool">Cracked Red Eye Orbs/Red Eye Orb</h4>
 <p class="multip">
 	When used, Red Eye Orbs will cause you to invade another player's world in an attempt to kill them. Cracked Red Eye Orbs can only be used
-	once, but once you get a full Red Eye Orb you can invade an unlimited 
+	once, but once you get a full Red Eye Orb you can invade an unlimited number of times.
 </p>
+
+<img src="../media/images/cracked_eye_orb.png" alt="Cracked Red Eye Orb" title="A Cracked Red Eye Orb that can be used once to invade another player's world." />
+<img src="../media/images/red_eye_orb.png" alt="Red Eye Orb" title="A flawless Red Eye Orb that can be used to invade an unlimited number of times." />
 
 
 
@@ -171,34 +182,41 @@
 <p>
 	Upgrade materials such as Titanite Shards.
 </p>
+<img src="../media/images/titanite_shard.png" alt="Titanite Shard" title="Titanite Shards are used to reinforce weapons from +1 to +3." />
 
 <h3>Key Items</h3>
 <p>
 	Keys, Spell tomes, and other items needed to progress in the game. Check their descriptions to figure out what you 
 	need to do with them.
 </p>
+<img src="../media/images/key.png" alt="Key" title="A Key used to unlock a certain door." />
 
 <h3>Spells</h3>
 <p>
 	Spells you've found or bought. Check their descriptions to figure out what they do.
 </p>
+<img src="../media/images/sorcery.png" alt="Spell" title="A Spell which can be cast with the appropriate Catalyst." />
+
 
 <h3>Melee Weapons</h3>
 <p>
 	If you can swing it, it's a Meelee Weapon. You can check its Scaling and Attribute Requirements by hovering over it.
 	Check the description to figure out if it has any special effects and what its Weapon Art does.
 </p>
+<img src="../media/images/sword.png" alt="Sword" title="A melee weapon." />
 
 <h3>Ranged Weapons</h3>
 <p>
 	Bows, Crossbows and Greatbows. Check their descriptions to figure out what their Weapon Arts do.
 </p>
+<img src="../media/images/crossbow.png" alt="Crossbow" title="A crossbow used to damage enemies from a safe range." />
 
 <h3>Catalysts</h3>
 <p>
 	Items used to cast spells. Check their descriptions to figure out which spells they can cast, and whether they have any
 	special effects.
 </p>
+<img src="../media/images/staff.png" alt="Staff" title="A staff, a catalyst for casting Sorceries." />
 
 <h3>Shields</h3>
 <p>
@@ -206,35 +224,43 @@
 	Weapon Art by checking the description.
 </p>
 
+<img src="../media/images/shield.png" alt="Shield" title="A shield used to block enemy attacks." />
+
 <h3>Head</h3>
 <p>
-	Armor for you head.
+	Armor for your head.
 </p>
+<img src="../media/images/helmet.png" alt="Helmet" title="A piece of head armor that provides defense." />
 
 <h3>Chest</h3>
 <p>
 	Armor for your chest.
 </p>
+<img src="../media/images/chest.png" alt="Chestplate" title="A piece of chest armor that provides defense." />
 
 <h3>Hands</h3>
 <p>
 	Armor for your hands.
 </p>
+<img src="../media/images/hands.png" alt="Gauntlets" title="Gauntlets for your hands that provide defense." />
 
 <h3>Legs</h3>
 <p>
 	Armor for your legs.
 </p>
+<img src="../media/images/leggings.png" alt="Leggings" title="Leg armor that provides defense." />
 
 <h3>Arrows/Bolts</h3>
 <p>
 	Arrows can only be shot from Bows. Bolts can only be shot from Crossbows. Greatarrows can only be shot from Greatbows.
 </p>
+<img src="../media/images/arrows.png" alt="Arrows" title="Ammunition for a Bow." />
 
 <h3>Rings</h3>
 <p>
 	Rings provide additional effects when equipped. You can have up to 4 rings equipped at a time.
 </p>
+<img src="../media/images/ring.png" alt="Ring" title="A ring that provides a unique bonus effect." />
 </div>
 
 <a id="previous" href="firelink.html">Previous Page</a>
