--- a/magic/magic.html
+++ b/magic/magic.html
@@ -100,6 +100,12 @@
 
 <h2>Magic</h2>
 
+<div id="magic_images">
+<img src="../media/images/sorcery.png" alt="Sorcery" title="Sorcery" />
+<img src="../media/images/pyromancy.png" alt="Pyromancy" title="Pyromancy" />
+<img src="../media/images/miracle.png" alt="Miracle" title="Miracle" />
+</div>
+
 <div id="leftside">
 <h3>Magic Overview</h3>
 <p>
@@ -162,6 +168,8 @@
 	Casting a spell consumes both stamina and Focus Points, so be sure to allot some of your Estus
 	into the Ashen Estus Flask if you are planning on using spells.
 </p>
+
+<img src="../media/images/ashen_estus_flask.png" alt="Ashen Estus Flask" title="Drink Ashen Estus to replenish focus points." />
 
 </div>
 
