--- a/magic/miracles.html
+++ b/magic/miracles.html
@@ -106,9 +106,12 @@
 	Miracles are tales of the gods which can be used to cause magical effects to happen. Most Miracles are utility spells such as healing, buffs, etc., however there are a few offensive
 	Miracles that utilize the power of lightning to deal damage to enemies.
 </p>
+<img src="../media/images/miracle.png" alt="Miracle" title="Miracle" />
 
 
 <h3>Scaling</h3>
+<img src="../media/images/faith.jpg" alt="Faith" title="Faith" />
+
 <p>
 	Miracles deal more damage and restore more health the more points you have invested in the Faith stat. 
 	Miracles will also have a required level of Faith in order to be able to cast them.
@@ -121,6 +124,8 @@
 	to not flinch when casting even if you're hit by an enemy attack. The Herald starts with a Talisman, and the Cleric starts with a chime. Chimes and Talismans can be upgraded
 	at Andre the Blacksmith just like normal weapons.
 </p>
+<img src="../media/images/chime.png" alt="Chime" title="A holy Chime for casting Miracles." />
+<img src="../media/images/talisman.png" alt="Talisman" title="A Talisman used to cast Miracles." />
 
 
 <h3>Irina of Carim</h3>
@@ -138,6 +143,8 @@
 		<li>Talk to Irina and Touch her.</li>
 		<li><strong>Talk to Irina again</strong> and she will teleport to Firelink Shrine.</li>
 	</ol>
+	
+	<img src="../media/images/irina.jpg" alt="Irina of Carim" title="Irina of Carim" />
 </p>	
 	
 <p>	
@@ -149,6 +156,8 @@
 	If you come across any Braille Divine Tomes during your adventure, bring them to Irina in Firelink Shrine. Once she has read them, you will be able to purchase new and stronger miracles from
 	her.
 </p>
+<img src="../media/images/braille_divine_tome.png" alt="Braille Divine Tome" title="A Tome of Miracles written in Braille." />
+
 </div>
 
 <a id="previous" href="pyromancy.html">Previous Page</a>
