--- a/magic/pyromancy.html
+++ b/magic/pyromancy.html
@@ -100,14 +100,18 @@
 
 <h2>Pyromancy</h2>
 
+
 <div id="leftside">
 <h3>Pyromancy Overview</h3>
 <p>
 	Pyromancy is the art of manipulating fire. The spells in the Pyromancy school are mostly offensive in nature with a few utility spells, 
 	ranging from thrown fire of all kinds to defensive and offensive character buffs and even a heal over time.
 </p>
+<img src="../media/images/pyromancy.png" alt="Pyromancy" title="Pyromancy" />
 
 <h3>Scaling</h3>
+<img src="../media/images/intelligence.jpg" alt="Intelligence" title="Intelligence" />
+<img src="../media/images/faith.jpg" alt="Faith" title="Faith" />
 <p>
 	Pyromancies deal more damage the more points you have invested in the Intelligence and the Faith stats. 
 	Pyromancies will also have a required level of Intelligence and/or Faith in order to be able to cast them.
@@ -119,6 +123,7 @@
 	Pyromancies require a Pyromancy Flame in order to cast. Pyromancers automatically start with a Pyromancy Flame, and a Pyromancy Flame will be given to you if you talk to Cornyx of the 
 	Great Swamp for the first time in Firelink Shrine. Pyromancy Flames can be upgraded at Cornyx as well, using the regular Titanite upgrade materials.
 </p>
+<img src="../media/images/pyromancy_flame.png" alt="Pyromancy Flame" title="Pyromancy Flame for casting Pyromancies." />
 
 
 <h3>Cornyx of the Great Swamp</h3>
@@ -126,12 +131,14 @@
 	Cornyx is an NPC that can be found locked in a cage on top of the building above the Cliff Underside bonfire in the Undead Settlement area. After you've talked to him and accepted
 	his request to become your Pyromancy teacher, he will teleport to Firelink Shrine where you can talk to him once more to purchase new Pyromancies and upgrade your Pyromancy Flame.
 </p>
+<img src="../media/images/cornyx.jpg" alt="Cornyx of the Great Swamp" title="Cornyx of the Great Swamp" />
 
 
 <h3>Pyromancy Tomes</h3>
 <p>
 	Be on the lookout for Pyromancy Tomes. Bring these key items to Cornyx in Firelink Shrine and he will add a bunch of new Pyromancies to his inventory for you to buy.
 </p>
+<img src="../media/images/pyromancy_tome.png" alt="Pyromancy Tome" title="A tome containing Pyromancies." />
 </div>
 
 <a id="previous" href="sorcery.html">Previous Page</a>
