--- a/magic/sorcery.html
+++ b/magic/sorcery.html
@@ -100,16 +100,18 @@
 
 <h2>Sorcery</h2>
 
+
 <div id="leftside">
 <h3>Sorcery Overview</h3>
 <p>
 	Sorcery is the art of harnessing the magical power of souls and unleashing it against your foes. Most spells in the Sorcery school are offensive, ranging from projectiles to
 	close range soul swords. There are a few utility spells in Sorcery, however they are only effective in niche scenarios.
-	
-	
 </p>
+
+<img src="../media/images/sorcery.png" alt="Sorcery" title="Sorcery" />
 	
 <h3>Scaling</h3>
+<img src="../media/images/intelligence.jpg" alt="Intelligence" title="Intelligence" />
 <p>
 	Sorceries deal more damage the more points you have invested in the Intelligence stat. Sorceries will also have a required level of Intelligence in order to be able to cast them.
 	Generally, stronger spells require a higher level of Intelligence in order to cast.
@@ -123,6 +125,8 @@
 	weapon art of a Staff, your Sorceries will temporarily inflict more damage. Staves can be upgraded at Andre the Blacksmith, just like a regular weapon.
 </p>
 
+<img src="../media/images/staff.png" alt="Staff" title="A staff for casting Sorceries." />
+
 
 <h3>Orbeck of Vinheim</h3>
 <p>
@@ -131,11 +135,15 @@
 	From there you can talk to him again and buy new Sorceries. However if you don't bring him any Sorcery Scrolls before you fight the Abyss Watchers, he will leave your game permanently.
 </p>
 
+<img src="../media/images/orbeck.jpg" alt="Orbeck of Vinheim" title="Orbeck of Vinheim." />
+
 <h3>Sorcery Scrolls</h3>
 <p>
 	Keep your eyes peeled for Sorcery Scrolls. These key items can be brought to Orbeck in Firelink Shrine (if you've found him already), and he will then have new and more powerful
 	Sorceries for you to buy. Be sure to bring Orbeck at least one Sorcery Scroll before you fight the Abyss Watchers, or else he will leave Firelink Shrine forever.	
 </p>
+
+<img src="../media/images/sorcery_scroll.png" alt="Sorcery Scroll" title="A scroll containing Sorceries." />
 </div>
 
 <a id="previous" href="magic.html">Previous Page</a>
