--- a/combat/advanced_combat.html
+++ b/combat/advanced_combat.html
@@ -232,11 +232,13 @@
 		<li>
 			Use the <strong>Bloodred Moss Clump</strong> item to get rid of any Bleed build up on your character.
 		</li>
+		<img src="../media/images/bloodred_moss_clump.png" alt="Bloodred Moss Clump" title="Use the Bloodred Moss Clump to cleanse any Bleed build up." />
 		
 		<li>
 			You can use the <strong>Carthus Rouge</strong> item to buff your weapon with the Bleed effect. If your weapon already has a Bleed effect, the Carthus
 			Rouge will cause Bleed to build in bigger chunks per hit.
 		</li>
+		<img src="../media/images/carthus_rouge.png" alt="Carthus Rouge" title="Use the Carthus Rouge to buff your weapon with Bleed damage." />
 	</ul>
 	
 <h4>Poison</h4>
@@ -249,11 +251,13 @@
 		<li>
 			Use the <strong>Purple Moss Clump</strong> item to cure the Poison effect and get rid of any Poison build up on your character.
 		</li>
+		<img src="../media/images/purple_moss_clump.png" alt="Purple Moss Clump" title="Use the Purple Moss Clump to cleanse any Poison build up." />
 		
 		<li>
 			You can use the <strong>Rotten Pine Resin</strong> item to buff your weapon with the Poison effect. If your weapon already has a Poison effect, the Rotten
 			Pine Resin will cause Poison to build in bigger chunks per hit.
 		</li>
+		<img src="../media/images/rotten_pine_resin.png" alt="Rotten Pine Resin" title="Use the Rotten Pine Resin to buff your weapon with Poison damage." />
 	</ul>
 
 <h4>Toxic</h4>
@@ -267,6 +271,7 @@
 		<li>
 			Make sure to use the <strong>Blooming Purple Moss Clump</strong> item to cure the Toxic effect and to get rid of any Toxic build up on your character.
 		</li>
+		<img src="../media/images/blooming_purple_moss_clump.png" alt="Blooming Purple Moss Clump" title="Use the Blooming Purple Moss Clump to cleanse any Toxic build up." />
 	</ul>
 
 <h4>Frost</h4>
@@ -280,6 +285,7 @@
 		<li>
 			Use the <strong>Rime Blue Moss Clump</strong> item to cure the Toxic effect and to get rid of any Frost build up on your character.
 		</li>
+		<img src="../media/images/rime_blue_moss_clump.png" alt="Rime Blue Moss Clump" title="Use the Rime Blue Moss Clump to cleanse any Frost build up." />
 	</ul>
 
 <h4>Curse</h4>
@@ -292,10 +298,7 @@
 		<li>
 			Make sure to use the <strong>Purging Stone</strong> item to get rid of any Curse build up on your character.
 		</li>
-		
-		<li>
-			Fun Fact: Other statues that look like players are actually other players that were cursed and turned to stone.
-		</li>
+		<img src="../media/images/purging_stone.png" alt="Purging Stone" title="Use the Purging Stone to cleanse any Curse build up." />
 	</ul>
 
 </div>	
