--- a/getting started/items.html
+++ b/getting started/items.html
@@ -147,8 +147,8 @@
 	you can activate it to summon another player to help you progress through your own game.
 </p>
 
-<img src="../media/images/whitesign.png" alt="White Sign Soapstone" title="A White Sign Soapstone that can be used to write one's Summon Sign on the ground." />
-<img src="../media/images/summon_sign.jpg" alt="Summon Sign" title="A signiture written on the ground by one with a White Sign Soapstone. Can be activated to summon a cooperator." />
+<img class="multip" src="../media/images/whitesign.png" alt="White Sign Soapstone" title="A White Sign Soapstone that can be used to write one's Summon Sign on the ground." />
+<img class="multip" src="../media/images/summon_sign.jpg" alt="Summon Sign" title="A signiture written on the ground by one with a White Sign Soapstone. Can be activated to summon a cooperator." />
 
 <h4 class="multitool">Black Separation Crystal</h4>
 <p class="multip">
@@ -156,7 +156,7 @@
 	so you may have to use this to progress. Cannot banish invading phantoms.
 </p>
 
-<img src="../media/images/black_separation_crystal.png" alt="Black Separation Crystal" title="Activate the Black Separation Crystal to banish friendly phantoms from your world." />
+<img class="multip" src="../media/images/black_separation_crystal.png" alt="Black Separation Crystal" title="Activate the Black Separation Crystal to banish friendly phantoms from your world." />
 
 <h4 class="multitool">Embers</h4>
 <p class="multip">
@@ -165,7 +165,7 @@
 	Embering and summoning phantoms to help will increase the chance of an invading player to enter your world and try to kill you. 
 </p>
 
-<img src="../media/images/ember.png" alt="Ember" title="An Ember of the fading flame, activate it to connect your own world to others." />
+<img class="multip" src="../media/images/ember.png" alt="Ember" title="An Ember of the fading flame, activate it to connect your own world to others." />
 
 <h4 class="multitool">Cracked Red Eye Orbs/Red Eye Orb</h4>
 <p class="multip">
@@ -173,8 +173,8 @@
 	once, but once you get a full Red Eye Orb you can invade an unlimited number of times.
 </p>
 
-<img src="../media/images/cracked_eye_orb.png" alt="Cracked Red Eye Orb" title="A Cracked Red Eye Orb that can be used once to invade another player's world." />
-<img src="../media/images/red_eye_orb.png" alt="Red Eye Orb" title="A flawless Red Eye Orb that can be used to invade an unlimited number of times." />
+<img class="multip" src="../media/images/cracked_eye_orb.png" alt="Cracked Red Eye Orb" title="A Cracked Red Eye Orb that can be used once to invade another player's world." />
+<img class="multip" src="../media/images/red_eye_orb.png" alt="Red Eye Orb" title="A flawless Red Eye Orb that can be used to invade an unlimited number of times." />
 
 
 
